--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <title>Page Title</title>
 </head>
 <body>
-    <!-- Content visible to users goes here -->
+    <div id="#c1"> Hello World</div>
+
+    <script src="app.js"></script>
 </body>
 </html>
+
+<!-- https://www.youtube.com/watch?v=F7PLPJqVotk&list=PL4cUxeGkcC9hYYGbV60Vq3IXYNfDk8At1&index=2 -->
