--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Page Title</title>
 </head>
 <body>
-    <div id="#c1"> Hello World</div>
 
-    <script src="app.js"></script>
+<div id="comp1">{{ message }}</div>
+
+<script src="./app.js"></script>
 </body>
 </html>
 
