--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<div id="comp1">{{ message }}</div>
+<div id="comp1">
+    <div v-if="showBooks">
+        <div>{{ title }} - {{ author }} - {{ age }} </div>
+        <button v-on:click="age++">Increase Age</button> <!-- age is -->
+        <button v-on:click="age--">Decrease Age</button>
+        <div v-on:click="changeTitle('Two Towers')">c h a n g e  t i t l e</div>
+    </div>
+    <button v-on:click="toggleShowBooks()">Show/Hide Books</button>
+</div>
 
 <script src="./app.js"></script>
 </body>
