--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>{{ title }} - {{ author }} - {{ age }} </div>
         <button v-on:click="age++">Increase Age</button> <!-- age is -->
         <button v-on:click="age--">Decrease Age</button>
-        <div v-on:click="changeTitle('Two Towers')">c h a n g e  t i t l e</div>
+        <div v-on:click="changeTitle('Two Towers')">Change Title</div>
     </div>
     <button v-on:click="toggleShowBooks()">Show/Hide Books</button>
 </div>
